--- a/my-site/index.html
+++ b/my-site/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Find4U - קטגוריות מוצרים</title>
+  <base href="/Find4U/">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="logo-container">
-    <img src="/assets/images/FIND4ULOGGO.png" alt="Find4U Logo" class="logo" />
+    <img src="assets/images/FIND4ULOGGO.png" alt="Find4U Logo" class="logo" />
   </div>
   <p class="subtitle">אנחנו מוצאים עבורכם את המוצרים השווים ביותר אחרי שבדקנו אותם</p>
 
